--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.5",
     "viem": "^2.21.48",
-    "wagmi": "^2.12.33"
+    "wagmi": "^2.12.33",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
