--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@reown/appkit": "^1.4.1",
     "@reown/appkit-adapter-wagmi": "^1.4.1",
     "@supabase/supabase-js": "^2.46.1",
