--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-query": "^5.62.15",
     "@tanstack/react-router": "^1.16.6",
+    "@tiptap/extension-link": "^2.11.5",
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -39,6 +43,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/router-devtools": "^1.16.6",
     "@tanstack/router-vite-plugin": "^1.16.5",
     "@types/canvas-confetti": "^1.6.4",
